# OS-SP-Course-Project

./: Application.cpp  Application.h  CMakeLists.txt  ConnectToServer.cpp  ConnectToServer.h  MainMenu.cpp  MainMenu.h  TestServer.cpp  TestServer.h  UserInterface.cpp  UserInterface.h  main.cpp
command/: Command.cpp  Command.h  CommandQueue.cpp  CommandQueue.h
entity_managment/: Boss.cpp  Boss.h  Data.cpp  Data.h  SceneNode.cpp  SceneNode.h  sever_structures.h
entity_managment/Bullet/: Bullet.cpp  Bullet.h
entity_managment/Entity/: Entity.cpp  Entity.h  EntityType.h
entity_managment/PickUp/: Pickup.cpp  Pickup.h
input_handler/: InputHandler.cpp  InputHandler.h
levelDesign/: Level.cpp  Level.h  MapTile.cpp  MapTile.h  Tile.cpp  Tile.h
player_managment/: Heart.cpp  Heart.h
player_managment/player/: Player.cpp  Player.h
resources/: Fonts.h  ResourceHolder.h  ResourceHolder.inl  Textures.h
resources/Textures/: boss.pxo  tiles.pxo
server/: client.c  client.cpp  client.h  server.c  server_structures.h  sever_structures.h
states/: ConnectState.cpp  ConnectState.h  GameState.cpp  GameState.h  HostState.cpp  HostState.h  IngameMenuState.cpp  IngameMenuState.h  LobbyState.cpp  LobbyState.h  MenuState.cpp  MenuState.h  State.cpp  State.h  StateIdentifiers.h  StateStack.cpp  StateStack.h  TitleState.cpp  TitleState.h  utility.cpp  utility.h
